unpackaged/main/default/objects/Opportunity/fields/Concrete_slab_materials__c.field-meta.xml
<CustomField>
    <fullName>Concrete_slab_materials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Concrete slab materials offer. Ref #CCRM-269</description>
    <label>Concrete slab materials</label>
    <type>Checkbox</type>
</CustomField>