unpackaged/main/default/objects/Opportunity/fields/Concrete_slab_pump__c.field-meta.xml
<CustomField>
    <fullName>Concrete_slab_pump__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Concrete slab pump offer</description>
    <label>Concrete slab pump</label>
    <type>Checkbox</type>
</CustomField>