unpackaged/main/default/objects/Opportunity/fields/Contract_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accepted__c</fullName>
    <description>Contract Accepted date</description>
    <label>Contract Accepted</label>
    <type>Date</type>
</CustomField>