unpackaged/main/default/objects/Opportunity/fields/Corner_Flashings__c.field-meta.xml
<CustomField>
    <fullName>Corner_Flashings__c</fullName>
    <label>Corner Flashings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>