unpackaged/main/default/objects/Opportunity/fields/COS_API_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>COS_API_Failure_Reason__c</fullName>
    <label>COS API Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>