unpackaged/main/default/objects/Opportunity/fields/COS_Number__c.field-meta.xml
<CustomField>
    <fullName>COS_Number__c</fullName>
    <formula>SyncedQuote.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COS Number</label>
    <type>Text</type>
</CustomField>