unpackaged/main/default/objects/Opportunity/fields/COS_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>COS_Opportunity_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID for COS Opportunities</description>
    <externalId>true</externalId>
    <label>COS_Opportunity_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>