unpackaged/main/default/objects/Opportunity/fields/COS_Transferred__c.field-meta.xml
<CustomField>
    <fullName>COS_Transferred__c</fullName>
    <label>COS Transferred</label>
    <type>Date</type>
</CustomField>