unpackaged/main/default/objects/Opportunity/fields/Create_COS__c.field-meta.xml
<CustomField>
    <fullName>Create_COS__c</fullName>
    <formula>IF(NOT(CONTAINS( Account.RecordType.DeveloperName , &quot;Prospect&quot;)),HYPERLINK($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.COS_New_Quote_URL__c
&amp;Id&amp;&quot;-&quot;&amp;Account.Power_Pass_Account_Number__c&amp;&quot;,custjobaddress=&quot;&amp;Site_Address__c,
&quot;Click Here&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create COS</label>
    <type>Text</type>
</CustomField>