unpackaged/main/default/objects/Opportunity/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <formula>IF( Credit_Limit_Amount__c = 0,&quot;$0.00&quot;,
SUBSTITUTE(
IF(Credit_Limit_Amount__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp;
&quot;$&quot; &amp;
IF(ABS(Credit_Limit_Amount__c) &gt;= 1000000, TEXT(FLOOR(Credit_Limit_Amount__c / 1000000)) &amp; &quot;,&quot;, &quot;&quot;)
&amp; IF(ABS(Credit_Limit_Amount__c) &gt;= 1000, RIGHT(TEXT(FLOOR(Credit_Limit_Amount__c / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;)
&amp; RIGHT(TEXT(FLOOR(Credit_Limit_Amount__c)), 3)
&amp; &quot;.&quot; &amp; RIGHT(TEXT(ROUND(Credit_Limit_Amount__c * 100, 0)), 2)
&amp; IF(Credit_Limit_Amount__c &lt; 0, &quot;)&quot;, &quot;&quot;)
,&quot;-&quot;,&quot;&quot;))
+
IF(
(Amount &gt; Credit_Limit_Amount__c &amp;&amp; Credit_Limit_Amount__c != 0),&quot; &quot; +
IMAGE(&#39;/resource/1591309946000/Exclamation_Mark&#39;, &#39;Alert!&#39;,15,15),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit</label>
    <type>Text</type>
</CustomField>