unpackaged/main/default/objects/Opportunity/fields/Credit_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Amount__c</fullName>
    <description>Currency for account credit limit. Not to appear on page layout</description>
    <formula>Account.Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>