unpackaged/main/default/objects/Opportunity/fields/Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier__c</fullName>
    <label>Current Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>