unpackaged/main/default/objects/Opportunity/fields/Customer_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Time__c</fullName>
    <label>Customer Contact Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 1 Hour</fullName>
            </value>
            <value>
                <fullName>1 - 4 Hours</fullName>
            </value>
            <value>
                <fullName>4 - 8 Hours</fullName>
            </value>
            <value>
                <fullName>Over 8 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>