unpackaged/main/default/objects/Opportunity/fields/Days_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Update__c</fullName>
    <description>This field calculates the number of days since an opportunity has been updated.</description>
    <formula>IF(LastActivityDate &gt; DATEVALUE(LastModifiedDate),

TODAY() - LastActivityDate,

TODAY()- DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>