unpackaged/main/default/objects/Opportunity/fields/Days_Until_Ready__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Ready__c</fullName>
    <formula>Items_Ready_for_Collection__c  -  COS_Transferred__c</formula>
    <label>Days Until Ready</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>