unpackaged/main/default/objects/Opportunity/fields/Deck_And_Balcony_Joists_CAD__c.field-meta.xml
<CustomField>
    <fullName>Deck_And_Balcony_Joists_CAD__c</fullName>
    <label>Deck And Balcony Joists CAD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - LVL (Default)</fullName>
            </value>
            <value>
                <fullName>Yes - MGP 10 H3</fullName>
            </value>
            <value>
                <fullName>Yes - KDHW</fullName>
            </value>
            <value>
                <fullName>Yes - Other</fullName>
            </value>
            <value>
                <fullName>Yes - LVL</fullName>
                <isActive>false</isActive>
                <label>Yes - LVL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>