unpackaged/main/default/objects/Opportunity/fields/Deck_Membrane_Flooring__c.field-meta.xml
<CustomField>
    <fullName>Deck_Membrane_Flooring__c</fullName>
    <label>Deck Membrane Flooring</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Timber_Floor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>