unpackaged/main/default/objects/Opportunity/fields/Deck_Membrane_Flooring_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deck_Membrane_Flooring_Notes__c</fullName>
    <label>Deck Membrane Flooring Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>