unpackaged/main/default/objects/Opportunity/fields/Deck_Or_Balcony_Joist_Centres__c.field-meta.xml
<CustomField>
    <fullName>Deck_Or_Balcony_Joist_Centres__c</fullName>
    <label>Deck Or Balcony Joist Centres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>450c</fullName>
            </value>
            <value>
                <fullName>600c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>