unpackaged/main/default/objects/Opportunity/fields/Deck_Patio_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deck_Patio_Notes__c</fullName>
    <label>Deck &amp; Patio Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>