unpackaged/main/default/objects/Opportunity/fields/Deck_Specification__c.field-meta.xml
<CustomField>
    <fullName>Deck_Specification__c</fullName>
    <label>Deck Specification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deck_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Rad Prem 88x21</fullName>
            </value>
            <value>
                <fullName>Rad Prem 88x32</fullName>
            </value>
            <value>
                <fullName>Rad Merch 88x21</fullName>
            </value>
            <value>
                <fullName>Rad Merch 88x32</fullName>
            </value>
            <value>
                <fullName>Rad Clears 88x21</fullName>
            </value>
            <value>
                <fullName>Rad Clears 88x32</fullName>
            </value>
            <value>
                <fullName>Jambu 90x19</fullName>
            </value>
            <value>
                <fullName>Jambu 140x19</fullName>
            </value>
            <value>
                <fullName>Kwila 90x19</fullName>
            </value>
            <value>
                <fullName>Kwila 140x19</fullName>
            </value>
            <value>
                <fullName>Ekologix</fullName>
            </value>
            <value>
                <fullName>Biform</fullName>
            </value>
            <value>
                <fullName>Permadeck</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>