unpackaged/main/default/objects/Opportunity/fields/Deck_Type__c.field-meta.xml
<CustomField>
    <fullName>Deck_Type__c</fullName>
    <label>Deck Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deck_Patio__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Pine</fullName>
            </value>
            <value>
                <fullName>Hardwood</fullName>
            </value>
            <value>
                <fullName>Composite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>