unpackaged/main/default/objects/Opportunity/fields/Deck_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deck_Type_Notes__c</fullName>
    <label>Deck Type Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>