unpackaged/main/default/objects/Opportunity/fields/Decking__c.field-meta.xml
<CustomField>
    <fullName>Decking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decking offer</description>
    <label>Decking</label>
    <type>Checkbox</type>
</CustomField>