unpackaged/main/default/objects/Opportunity/fields/Decorative_external_lighting__c.field-meta.xml
<CustomField>
    <fullName>Decorative_external_lighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decorative &amp; external lighting offer</description>
    <label>Decorative &amp; external lighting</label>
    <type>Checkbox</type>
</CustomField>