unpackaged/main/default/objects/Opportunity/fields/District_Council__c.field-meta.xml
<CustomField>
    <fullName>District_Council__c</fullName>
    <label>District Council</label>
    <length>255</length>
    <type>Text</type>
</CustomField>