unpackaged/main/default/objects/Opportunity/fields/Door_Furniture__c.field-meta.xml
<CustomField>
    <fullName>Door_Furniture__c</fullName>
    <label>Door Furniture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>