unpackaged/main/default/objects/Opportunity/fields/Door_Furniture_Notes__c.field-meta.xml
<CustomField>
    <fullName>Door_Furniture_Notes__c</fullName>
    <label>Door Furniture Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>