unpackaged/main/default/objects/Opportunity/fields/Door_Furniture_Type__c.field-meta.xml
<CustomField>
    <fullName>Door_Furniture_Type__c</fullName>
    <label>Door Furniture Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Door_Furniture__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Allegion - Tiva</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>