unpackaged/main/default/objects/Opportunity/fields/Door_Height__c.field-meta.xml
<CustomField>
    <fullName>Door_Height__c</fullName>
    <label>Door Height</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interior_Doors__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>1980 Std</fullName>
            </value>
            <value>
                <fullName>2100</fullName>
            </value>
            <value>
                <fullName>2200</fullName>
            </value>
            <value>
                <fullName>2400</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>