unpackaged/main/default/objects/Opportunity/fields/Door_Height_Notes__c.field-meta.xml
<CustomField>
    <fullName>Door_Height_Notes__c</fullName>
    <label>Door Height Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>