unpackaged/main/default/objects/Opportunity/fields/Door_Type__c.field-meta.xml
<CustomField>
    <fullName>Door_Type__c</fullName>
    <label>Door Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interior_Doors__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>MDF Paint 3mm skin</fullName>
            </value>
            <value>
                <fullName>4mm Polycore - HNZ</fullName>
            </value>
            <value>
                <fullName>Pressed Panel</fullName>
            </value>
            <value>
                <fullName>V-Groove</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>