unpackaged/main/default/objects/Opportunity/fields/Dragon_Board__c.field-meta.xml
<CustomField>
    <fullName>Dragon_Board__c</fullName>
    <label>Dragon Board</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BTI__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>