unpackaged/main/default/objects/Opportunity/fields/Dragon_Board_Location__c.field-meta.xml
<CustomField>
    <fullName>Dragon_Board_Location__c</fullName>
    <label>Dragon Board Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>