unpackaged/main/default/objects/Opportunity/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Type__c</fullName>
    <label>Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>