unpackaged/main/default/objects/Opportunity/fields/Earthquake_Zone__c.field-meta.xml
<CustomField>
    <fullName>Earthquake_Zone__c</fullName>
    <label>Earthquake Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>