unpackaged/main/default/objects/Opportunity/fields/Eaves_soffit__c.field-meta.xml
<CustomField>
    <fullName>Eaves_soffit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eaves/soffit offer</description>
    <label>Eaves/soffit</label>
    <type>Checkbox</type>
</CustomField>