unpackaged/main/default/objects/Opportunity/fields/Electrical_rough_in__c.field-meta.xml
<CustomField>
    <fullName>Electrical_rough_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Electrical rough in offer</description>
    <label>Electrical rough in</label>
    <type>Checkbox</type>
</CustomField>