unpackaged/main/default/objects/Opportunity/fields/Elevator__c.field-meta.xml
<CustomField>
    <fullName>Elevator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Elevator offer</description>
    <label>Elevator</label>
    <type>Checkbox</type>
</CustomField>