unpackaged/main/default/objects/Opportunity/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>The email of the store/tc</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>