unpackaged/main/default/objects/Opportunity/fields/Engineered_hard_flooring__c.field-meta.xml
<CustomField>
    <fullName>Engineered_hard_flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Engineered hard flooring offer</description>
    <label>Engineered hard flooring</label>
    <type>Checkbox</type>
</CustomField>