unpackaged/main/default/objects/Opportunity/fields/Engineering_Drawings_Required__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Drawings_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If required, drawings must be provided</inlineHelpText>
    <label>Engineering Drawings</label>
    <type>Checkbox</type>
</CustomField>