unpackaged/main/default/objects/Opportunity/fields/Evacare__c.field-meta.xml
<CustomField>
    <fullName>Evacare__c</fullName>
    <label>Evacare</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Other_BTI__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>