unpackaged/main/default/objects/Opportunity/fields/Evacare_Location__c.field-meta.xml
<CustomField>
    <fullName>Evacare_Location__c</fullName>
    <label>Evacare Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>