unpackaged/main/default/objects/Opportunity/fields/EWP_floor_systems__c.field-meta.xml
<CustomField>
    <fullName>EWP_floor_systems__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EWP floor systems offer</description>
    <label>EWP floor systems</label>
    <type>Checkbox</type>
</CustomField>