unpackaged/main/default/objects/Opportunity/fields/Excel_Version__c.field-meta.xml
<CustomField>
    <fullName>Excel_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Soft copy of an excel format</description>
    <label>Excel Version</label>
    <type>Checkbox</type>
</CustomField>