unpackaged/main/default/objects/Opportunity/fields/Ext_lock_up_materials_lower__c.field-meta.xml
<CustomField>
    <fullName>Ext_lock_up_materials_lower__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ext lock up materials lower offer</description>
    <label>Ext lock up materials lower</label>
    <type>Checkbox</type>
</CustomField>