unpackaged/main/default/objects/Opportunity/fields/Exterior_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Notes__c</fullName>
    <label>Exterior Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>