unpackaged/main/default/objects/Opportunity/fields/External_door_furniture__c.field-meta.xml
<CustomField>
    <fullName>External_door_furniture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External door furniture offer</description>
    <label>External door furniture</label>
    <type>Checkbox</type>
</CustomField>