unpackaged/main/default/objects/Opportunity/fields/External_doors__c.field-meta.xml
<CustomField>
    <fullName>External_doors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External doors offer</description>
    <label>External doors</label>
    <type>Checkbox</type>
</CustomField>