unpackaged/main/default/objects/Opportunity/fields/External_lock_up_materials__c.field-meta.xml
<CustomField>
    <fullName>External_lock_up_materials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External lock up materials offer</description>
    <label>External lock up materials</label>
    <type>Checkbox</type>
</CustomField>