unpackaged/main/default/objects/Opportunity/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <description>Prostix reference number</description>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>