unpackaged/main/default/objects/Opportunity/fields/Fascia_and_gutter__c.field-meta.xml
<CustomField>
    <fullName>Fascia_and_gutter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fascia and gutter offer</description>
    <label>Fascia and gutter</label>
    <type>Checkbox</type>
</CustomField>