unpackaged/main/default/objects/Opportunity/fields/Fencing__c.field-meta.xml
<CustomField>
    <fullName>Fencing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fencing offer</description>
    <label>Fencing</label>
    <type>Checkbox</type>
</CustomField>