unpackaged/main/default/objects/Opportunity/fields/Fibre_Cement_Weatherboard__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Cement_Weatherboard__c</fullName>
    <label>Fibre Cement Weatherboard</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Exterior__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>