unpackaged/main/default/objects/Opportunity/fields/Fibre_Cement_Weatherboard_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Cement_Weatherboard_Notes__c</fullName>
    <label>Fibre Cement Weatherboard Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>