unpackaged/main/default/objects/Opportunity/fields/Fibre_Cement_Weatherboard_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Cement_Weatherboard_Supplier__c</fullName>
    <label>Fibre Cement Weatherboard Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fibre_Cement_Weatherboard__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Hardies</fullName>
            </value>
            <value>
                <fullName>BGC</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>