unpackaged/main/default/objects/Opportunity/fields/Fibre_Cement_Weatherboard_Type__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Cement_Weatherboard_Type__c</fullName>
    <label>Fibre Cement Weatherboard Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fibre_Cement_Weatherboard_Supplier__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Rustic 205</fullName>
            </value>
            <value>
                <fullName>Smooth 180</fullName>
            </value>
            <value>
                <fullName>Smooth 240</fullName>
            </value>
            <value>
                <fullName>Smooth 305</fullName>
            </value>
            <value>
                <fullName>Frontier 245</fullName>
            </value>
            <value>
                <fullName>Frontier 310</fullName>
            </value>
            <value>
                <fullName>Linea 135</fullName>
            </value>
            <value>
                <fullName>Linea 150</fullName>
            </value>
            <value>
                <fullName>Linea 180</fullName>
            </value>
            <value>
                <fullName>Oblique 200</fullName>
            </value>
            <value>
                <fullName>Oblique 300</fullName>
            </value>
            <value>
                <fullName>Stria</fullName>
            </value>
            <value>
                <fullName>Nuline Plus</fullName>
            </value>
            <value>
                <fullName>Stratum</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>