unpackaged/main/default/objects/Opportunity/fields/Fibre_Cement_Weatherboard_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Cement_Weatherboard_Type_Notes__c</fullName>
    <label>Fibre Cement Weatherboard Type Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>