unpackaged/main/default/objects/Opportunity/fields/Final_Fit__c.field-meta.xml
<CustomField>
    <fullName>Final_Fit__c</fullName>
    <description>Checked if any Final Fit offers are checked</description>
    <formula>OR
(
Appliances__c = TRUE,
Fly_screens_barrier_doors__c = TRUE,
Garage_doors__c = TRUE,
Hot_water_service__c = TRUE,
Decorative_external_lighting__c = TRUE,
Smart_home__c = TRUE,
Shower_screens_mirrors__c = TRUE,
Tapware__c = TRUE,
Air_conditioners__c = TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Fit</label>
    <type>Checkbox</type>
</CustomField>